# FileToByte

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  FileToByte.sln  README.md
.github/workflows/: BuildAndRelease.yml  Release.yml
FileToByte/: Consolas.hpp  FTB.cpp  FTB.h  FileToByte - Backup.csproj  FileToByte.csproj  FileToByte.vcxproj  FileToByte.vcxproj.filters  Form1.Designer.cs  Form1.cs  Form1.resx  Globals.cpp  Globals.h  Main.cpp  Menu.cpp  Menu.h  Program.cs  Resource.aps  Resource.rc  Roboto.hpp  resource.h
FileToByte/ImGui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
FileToByte/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
source/: FTB.cpp  FTB.h  FTB.hpp  Fonts.cpp  Fonts.h  ImGuiManager.cpp  ImGuiManager.h  UserInterface.cpp  UserInterface.h  VulkanRenderer.cpp  Window.h  application.cpp  application.hpp  main.cpp
source/fonts/: Consolas.h  Consolas.hpp  Roboto.h  Roboto.hpp
